--- a/FinancialManagementApp/Pages/RegistrationPage.xaml
+++ b/FinancialManagementApp/Pages/RegistrationPage.xaml
@@ -37,7 +37,7 @@
                 <TextBox TextWrapping="Wrap" Padding="5" Margin="0, 5, 0, 5"/>
                 <PasswordBox Padding="5" Margin="0, 5, 0, 10" PasswordChar="$" MaxLength="25" />
 
-                <Button Margin="0,0,0,0" Padding="5">Зарегистрироваться</Button>
+                <Button Margin="0,0,0,0" Padding="5" Click="CreateUser" >Зарегистрироваться</Button>
                 <Button Padding="5" Margin="0, 5, 0, 0" Click="GoToAuthPage">Назад</Button>
             </StackPanel>
         </Grid>
