--- a/FinancialManagementApp/Pages/AuthPage.xaml
+++ b/FinancialManagementApp/Pages/AuthPage.xaml
@@ -3,7 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:FinancialManagementApp"
+      xmlns:local="clr-namespace:FinancialManagementApp" xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AuthPage">
@@ -13,23 +13,34 @@
             <ColumnDefinition Width="479*" />
             <ColumnDefinition Width="162*" />
         </Grid.ColumnDefinitions>
-        
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="55*" />
-            <RowDefinition Height="142*" />
-            <RowDefinition Height="176*" />
-            <RowDefinition Height="77*" />
+            <RowDefinition Height="2*" />
+            <RowDefinition Height="14*" />
+            <RowDefinition Height="27*" />
+            <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Height="120" Width="472">
-            <Image Height="120" Source="/Images/logo.png" />
-            <TextBlock Text="Управление финансами"  VerticalAlignment="Center" FontSize="30" FontWeight="Bold" />
+            <svgc:SvgViewbox Source="/Images/logo.svg" />
+            <StackPanel VerticalAlignment="Center">
+                <TextBlock Text="Управление финансами"  HorizontalAlignment="Center" FontSize="30" FontWeight="Bold" />
+                <TextBlock Text="Авторизация"  HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontStyle="Italic" TextDecorations="Underline" />
+            </StackPanel>
         </StackPanel>
 
         <StackPanel Margin="0,15,0,0" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="2">
 
-            <TextBox TextWrapping="Wrap" Padding="5" Margin="0, 5, 0, 5"/>
-            <PasswordBox Padding="5" Margin="0, 5, 0, 10" PasswordChar="$" MaxLength="25" />
+            <StackPanel>
+                <TextBlock Text="Email" />
+                <TextBox TextWrapping="Wrap" Padding="5" Margin="0, 5, 0, 5"/>
+            </StackPanel>
+
+            <StackPanel>
+                <TextBlock Text="Пароль" />
+                <PasswordBox Padding="5" Margin="0, 5, 0, 10" PasswordChar="$" MaxLength="25" />
+            </StackPanel>
+
 
             <Button Margin="0,0,0,0" Padding="5" Click="AuthUser">Войти</Button>
             <Button Padding="5" Margin="0, 5, 0, 0" Click="GoToRegistration">Зарегистрироваться</Button>
