--- a/FinancialManagementApp/Pages/HomePage.xaml
+++ b/FinancialManagementApp/Pages/HomePage.xaml
@@ -3,12 +3,37 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:FinancialManagementApp.Pages"
+      xmlns:local="clr-namespace:FinancialManagementApp.Pages" xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="HomePage">
 
     <Grid Background="White">
-        <TextBlock Text="Home page" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <StackPanel Background="#FFE9E9E9">
+            <svgc:SvgViewbox Height="50" Source="/Images/logo.svg" />
+        </StackPanel>
+
+        <StackPanel Grid.Row="1" Background="#FFE9E9E9">
+            <ListBox>
+                <ListBoxItem>Главная</ListBoxItem>
+                <ListBoxItem>История</ListBoxItem>
+                <ListBoxItem>Выход</ListBoxItem>
+            </ListBox>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Background="#FFE9E9E9">
+            
+        </StackPanel>
+        <StackPanel>
+            <Frame Source=""/>
+        </StackPanel>
     </Grid>
 </Page>
