--- a/FinancialManagementApp/Pages/RegistrationPage.xaml
+++ b/FinancialManagementApp/Pages/RegistrationPage.xaml
@@ -3,7 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:FinancialManagementApp.Pages" xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
+      xmlns:local="clr-namespace:FinancialManagementApp.Pages" xmlns:svgc="http://sharpvectors.codeplex.com/svgc/" xmlns:fa="http://schemas.fontawesome.io/icons/"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Регистрация">
@@ -17,8 +17,8 @@
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="127*" />
-                <RowDefinition Height="312*" />
-                <RowDefinition Height="11*" />
+                <RowDefinition Height="318*" />
+                <RowDefinition Height="5*" />
             </Grid.RowDefinitions>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Height="120" Width="472">
@@ -31,7 +31,7 @@
 
             </StackPanel>
 
-            <StackPanel Margin="0,15,0,0" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="1">
+            <StackPanel x:Name="RegForm" Margin="0,15,0,0" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="1">
 
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -55,7 +55,7 @@
                             <TextBlock Text="Отчество" />
                             <TextBox x:Name="MiddleName" TextWrapping="Wrap" Padding="5" Margin="0, 5, 0, 5"/>
                         </StackPanel>
-                        
+
                         <StackPanel>
                             <TextBlock Text="Баланс в рублях*" />
                             <TextBox x:Name="Balance" TextWrapping="Wrap" Padding="5" Text="0" Margin="0, 5, 0, 5"/>
@@ -88,6 +88,11 @@
 
                 <Button Margin="0,0,0,0" Padding="5" Click="CreateUser" >Зарегистрироваться</Button>
                 <Button Padding="5" Margin="0, 5, 0, 0" Click="GoToAuthPage">Войти</Button>
+            </StackPanel>
+
+            <StackPanel x:Name="Loader" Visibility="Collapsed" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <fa:ImageAwesome Icon="Spinner" Spin="True" Width="50" SpinDuration="4" />
+                <TextBlock  Text="Идет создание пользователя..." FontSize="18" />
             </StackPanel>
         </Grid>
     </Grid>
