--- a/FinancialManagementApp/Pages/RegistrationPage.xaml
+++ b/FinancialManagementApp/Pages/RegistrationPage.xaml
@@ -3,7 +3,8 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:FinancialManagementApp.Pages" xmlns:svgc="http://sharpvectors.codeplex.com/svgc/" xmlns:fa="http://schemas.fontawesome.io/icons/"
+      xmlns:svgc="http://sharpvectors.codeplex.com/svgc/" 
+      xmlns:fa="http://schemas.fontawesome.io/icons/"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Регистрация">
@@ -16,9 +17,9 @@
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="127*" />
-                <RowDefinition Height="318*" />
-                <RowDefinition Height="5*" />
+                <RowDefinition Height="22*" />
+                <RowDefinition Height="67*" />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Height="120" Width="472">
@@ -43,54 +44,54 @@
                     <StackPanel Orientation="Vertical" Grid.Column="2">
                         <StackPanel>
                             <TextBlock Text="Имя*" />
-                            <TextBox x:Name="FirstName" TextWrapping="Wrap" Padding="5" Margin="0, 5, 0, 5"/>
+                            <TextBox x:Name="FirstName" TextWrapping="Wrap" Margin="0, 5, 0, 5"/>
                         </StackPanel>
 
                         <StackPanel>
                             <TextBlock Text="Фамилия*" />
-                            <TextBox x:Name="LastName" TextWrapping="Wrap" Padding="5" Margin="0, 5, 0, 5"/>
+                            <TextBox x:Name="LastName" TextWrapping="Wrap" Margin="0, 5, 0, 5"/>
                         </StackPanel>
 
                         <StackPanel>
                             <TextBlock Text="Отчество" />
-                            <TextBox x:Name="MiddleName" TextWrapping="Wrap" Padding="5" Margin="0, 5, 0, 5"/>
+                            <TextBox x:Name="MiddleName" TextWrapping="Wrap" Margin="0, 5, 0, 5"/>
                         </StackPanel>
 
                         <StackPanel>
                             <TextBlock Text="Баланс в рублях*" />
-                            <TextBox x:Name="Balance" TextWrapping="Wrap" Padding="5" Text="0" Margin="0, 5, 0, 5"/>
+                            <TextBox x:Name="Balance" TextWrapping="Wrap" Text="0" Margin="0, 5, 0, 5"/>
                         </StackPanel>
                     </StackPanel>
 
                     <StackPanel Orientation="Vertical"  Grid.Column="0">
                         <StackPanel >
                             <TextBlock Text="Введите Email*" />
-                            <TextBox x:Name="Email" TextWrapping="Wrap" Padding="5" Margin="0, 5, 0, 5"/>
+                            <TextBox x:Name="Email" TextWrapping="Wrap"  Margin="0, 5, 0, 5"/>
                         </StackPanel>
 
                         <StackPanel>
                             <TextBlock Text="Номер карты (счёта)*" />
-                            <TextBox x:Name="WalletNumber" TextWrapping="Wrap" Padding="5" Margin="0, 5, 0, 5"/>
+                            <TextBox x:Name="WalletNumber" TextWrapping="Wrap"  Margin="0, 5, 0, 5"/>
                         </StackPanel>
 
                         <StackPanel>
                             <TextBlock Text="Пароль*" />
-                            <PasswordBox x:Name="Password" Padding="5" Margin="0, 5, 0, 5" PasswordChar="$" MaxLength="25" />
+                            <PasswordBox x:Name="Password" Margin="0, 5, 0, 5" PasswordChar="$" MaxLength="25" />
                         </StackPanel>
 
                         <StackPanel>
                             <TextBlock Text="Повторите пароль*" />
-                            <PasswordBox  x:Name="RepeatPassword" Padding="5" Margin="0, 5, 0, 5" PasswordChar="$" MaxLength="25" />
+                            <PasswordBox  x:Name="RepeatPassword" Margin="0, 5, 0, 5" PasswordChar="$" MaxLength="25" />
                         </StackPanel>
 
                     </StackPanel>
                 </Grid>
 
-                <Button Margin="0,0,0,0" Padding="5" Click="CreateUser" >Зарегистрироваться</Button>
-                <Button Padding="5" Margin="0, 5, 0, 0" Click="GoToAuthPage">Войти</Button>
+                <Button Style="{ StaticResource AcceptCustomButtom }" Margin="0,0,0,0" Click="CreateUser" >Зарегистрироваться</Button>
+                <Button Style="{ StaticResource CancelCustomButtom }"  Margin="0, 5, 0, 0"  Click="GoToAuthPage">Назад</Button>
             </StackPanel>
 
-            <StackPanel x:Name="Loader" Visibility="Collapsed" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <StackPanel x:Name="Loader" Visibility="Collapsed" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
                 <fa:ImageAwesome Icon="Spinner" Spin="True" Width="50" SpinDuration="4" />
                 <TextBlock  Text="Идет создание пользователя..." FontSize="18" />
             </StackPanel>
