Добалвен вход в ЛК, подгрузка данных о пользователе

--- a/FinancialManagementApp/Layouts/HomeLayout.xaml
+++ b/FinancialManagementApp/Layouts/HomeLayout.xaml
@@ -4,7 +4,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:svgc="http://sharpvectors.codeplex.com/svgc/" 
-      xmlns:local="clr-namespace:FinancialManagementApp.Controls"
+      xmlns:local="clr-namespace:FinancialManagementApp.Controls" 
+      xmlns:viewmodels="clr-namespace:FinancialManagementApp.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:HomeLayoutVM}"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
@@ -17,6 +18,31 @@
             <RowDefinition Height="50" />
             <RowDefinition />
         </Grid.RowDefinitions>
+        
+        <StackPanel Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Stretch">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <Button HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="0" Style="{ StaticResource AcceptCustomButtom }" FontSize="12" Padding="0,0,0,0" Height="35" Margin="10,0,0,0" Width="100">Добавить</Button>
+
+                <StackPanel Grid.Column="2" HorizontalAlignment="Right" Margin="0, 0, 10, 0">
+                    <DockPanel Margin="0, 0, 0, 3">
+                        <TextBlock Text="{ Binding Path=UserVM.LastName }" Margin="0,0,5,0" FontSize="16" FontWeight="SemiBold" />
+                        <TextBlock Text="{ Binding Path=UserVM.FirstName }" Margin="0,0,5,0" FontSize="16" FontWeight="SemiBold" />
+                        <TextBlock Text="{ Binding Path=UserVM.MiddleName }" FontSize="16" FontWeight="SemiBold" />
+                    </DockPanel>
+                    <DockPanel>
+                        <TextBlock Text="Баланс:" FontSize="14" Margin="0,0,5,0" />
+                        <TextBlock Text="{ Binding Path=WalletVM.Balance}" FontSize="14" FontWeight="Bold" />
+                    </DockPanel>
+                </StackPanel>
+            </Grid>
+            
+        </StackPanel>
 
         <StackPanel VerticalAlignment="Center">
             <svgc:SvgViewbox Height="35" Width="35" Source="/Images/logo.svg" />
