--- a/FinancialManagementApp/Pages/AuthPage.xaml
+++ b/FinancialManagementApp/Pages/AuthPage.xaml
@@ -3,7 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:FinancialManagementApp" xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
+      xmlns:local="clr-namespace:FinancialManagementApp" xmlns:svgc="http://sharpvectors.codeplex.com/svgc/" xmlns:fa="http://schemas.fontawesome.io/icons/"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AuthPage">
@@ -29,21 +29,28 @@
             </StackPanel>
         </StackPanel>
 
-        <StackPanel Margin="0,15,0,0" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="2">
+        <StackPanel x:Name="AuthForm" Margin="0,15,0,0" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="2">
 
             <StackPanel>
                 <TextBlock Text="Email" />
-                <TextBox TextWrapping="Wrap" Margin="0, 5, 0, 5"/>
+                <TextBox x:Name="email" TextWrapping="Wrap" Margin="0, 5, 0, 5"/>
             </StackPanel>
 
             <StackPanel>
                 <TextBlock Text="Пароль" />
-                <PasswordBox Margin="0, 5, 0, 10" PasswordChar="$" MaxLength="25" />
+                <PasswordBox x:Name="password" Margin="0, 5, 0, 10" PasswordChar="$" MaxLength="25" />
             </StackPanel>
 
 
             <Button Style="{StaticResource AcceptCustomButtom}" Margin="0,0,0,0" Click="AuthUser">Войти</Button>
             <Button Style="{StaticResource CancelCustomButtom}" Margin="0, 5, 0, 0" Click="GoToRegistration">Зарегистрироваться</Button>
+
+            <TextBlock x:Name="ErrorBlock" Visibility="Hidden" HorizontalAlignment="Center" FontSize="14" Margin="0,10,0,0" Foreground="Red"></TextBlock>
+        </StackPanel>
+
+        <StackPanel x:Name="Loader" Visibility="Collapsed" Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <fa:ImageAwesome Icon="Spinner" Spin="True" Width="50" SpinDuration="4" />
+            <TextBlock  Text="Попытка входа в систему..." FontSize="18" />
         </StackPanel>
     </Grid>
 </Page>
