--- a/FinancialManagementApp/Layouts/HomeLayout.xaml
+++ b/FinancialManagementApp/Layouts/HomeLayout.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:svgc="http://sharpvectors.codeplex.com/svgc/" 
       xmlns:local="clr-namespace:FinancialManagementApp.Controls" 
-      xmlns:viewmodels="clr-namespace:FinancialManagementApp.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:HomeLayoutVM}"
+      xmlns:viewmodels="clr-namespace:FinancialManagementApp.ViewModels;assembly=FinancialManagementApp.Infrastructure" d:DataContext="{d:DesignInstance Type=viewmodels:HomeLayoutVM}"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800">
 
@@ -27,7 +27,7 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
 
-                <Button Click="OpenAddHistoryModal" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="0" Style="{ StaticResource AcceptCustomButtom }" FontSize="12" Padding="0,0,0,0" Height="35" Margin="10,0,0,0" Width="100">Добавить</Button>
+                <Button Click="OpenAddHistoryModal" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="0" Style="{StaticResource AcceptCustomButtom }" FontSize="12" Padding="0,0,0,0" Height="35" Margin="10,0,0,0" Width="100">Добавить</Button>
 
                 <StackPanel Grid.Column="2" HorizontalAlignment="Right" Margin="0, 0, 10, 0">
                     <DockPanel Margin="0, 0, 0, 3">
