--- a/FinancialManagementApp/MainWindow.xaml
+++ b/FinancialManagementApp/MainWindow.xaml
@@ -5,7 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinancialManagementApp"
         mc:Ignorable="d"
-        Title="Управление финансами" Height="500" Width="800" ResizeMode="NoResize"
-        WindowStartupLocation="CenterScreen">
-    <Grid></Grid>
+        Title="Управление финансами"
+        ResizeMode="CanResize"
+        MinHeight="500" MinWidth="800"
+        Width="800" Height="500"
+        WindowStartupLocation="CenterScreen"
+        >
+    <Frame x:Name="mainWindowFraim" NavigationUIVisibility="Hidden" />
 </Window>
