Отображение окна редактирование записи в истории

--- a/FinancialManagementApp/Pages/Home/HistoryPage.xaml
+++ b/FinancialManagementApp/Pages/Home/HistoryPage.xaml
@@ -9,7 +9,13 @@
       Title="HistoryPage">
 
     <Grid Margin="10">
-        <DataGrid x:Name="WalletHistoryTable" AutoGenerateColumns="False" TextBlock.TextAlignment="Center" FontSize="13">
+        <DataGrid 
+            x:Name="WalletHistoryTable" 
+            AutoGenerateColumns="False" 
+            TextBlock.TextAlignment="Center"
+            CanUserAddRows="False"
+            MouseDoubleClick="EditRecord_MouseDoubleClick"
+            FontSize="13">
             <DataGrid.Columns>
                 <DataGridCheckBoxColumn CanUserResize="False">
                     <DataGridCheckBoxColumn.HeaderTemplate>
