Реактивное обновление статистики за месяц, вывод ID записи в истории

--- a/FinancialManagementApp/Pages/Home/HistoryPage.xaml
+++ b/FinancialManagementApp/Pages/Home/HistoryPage.xaml
@@ -37,7 +37,7 @@
 
                 
 
-                <DataGridTextColumn  Header="ID" IsReadOnly="True" CanUserResize="False" Binding="{ Binding WalletId }" />
+                <DataGridTextColumn  Header="ID" IsReadOnly="True" CanUserResize="False" Binding="{ Binding Id }" />
 
                 <DataGridTextColumn  Header="Тип операции" IsReadOnly="True" CanUserResize="False" Binding="{ Binding OperationTypeView }" />
 
