--- a/FinancialManagementApp/Pages/AuthPage.xaml
+++ b/FinancialManagementApp/Pages/AuthPage.xaml
@@ -3,7 +3,9 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:FinancialManagementApp" xmlns:svgc="http://sharpvectors.codeplex.com/svgc/" xmlns:fa="http://schemas.fontawesome.io/icons/"
+      xmlns:local="clr-namespace:FinancialManagementApp"
+      xmlns:svgc="http://sharpvectors.codeplex.com/svgc/" xmlns:fa="http://schemas.fontawesome.io/icons/"
+      xmlns:userControls="clr-namespace:FinancialManagementApp.Controls.UserControls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AuthPage">
@@ -30,17 +32,9 @@
         </StackPanel>
 
         <StackPanel x:Name="AuthForm" Margin="0,15,0,0" Grid.ColumnSpan="1" Grid.Column="1" Grid.Row="2">
-
-            <StackPanel>
-                <TextBlock Text="Email" />
-                <TextBox x:Name="email" TextWrapping="Wrap" Margin="0, 5, 0, 5"/>
-            </StackPanel>
-
-            <StackPanel>
-                <TextBlock Text="Пароль" />
-                <PasswordBox x:Name="password" Margin="0, 5, 0, 10" PasswordChar="$" MaxLength="25" />
-            </StackPanel>
-
+            <userControls:InputControl Placeholder="Введите Email" Margin="0,0,0,10" x:Name="email" />
+            
+            <userControls:PasswordInputControl x:Name="password" Placeholder="Пароль" Margin="0,0,0,10" />
 
             <Button Style="{StaticResource AcceptCustomButtom}" Margin="0,0,0,0" Click="AuthUser">Войти</Button>
             <Button Style="{StaticResource CancelCustomButtom}" Margin="0, 5, 0, 0" Click="GoToRegistration">Зарегистрироваться</Button>
